--- a/sticky footer con flexbox/style.css
+++ b/sticky footer con flexbox/style.css
@@ -3,12 +3,14 @@ body {
 	flex-direction: column;
 	align-items: center;
 	min-height: 100vh;
+	
 	font-size: 14px;
+	margin: 0; 
 }
 
 .header, .content, .footer {
-	margin: 10px;
-	padding: 5px;
+	margin: 0px;
+	padding: 0px;
 	min-width: 100vmax;
 	
 }
@@ -22,7 +24,8 @@ body {
 
 .content {
 	background: #6ed4e466;
-	flex: 1 0 0;
+	flex: 1;
+	margin: 5px 10px 15px 5px;
 }
 
 .content p {
@@ -33,4 +36,6 @@ body {
 	background: #b697f5;
     display: flex;
 	justify-content: center;
+	height: 100%;
+
 }
